<resources>
    <string name="app_name">办酒碗</string>
    <string name="action_settings">Settings</string>
    <string name="chooseLocation_nowLocation">当前地址：</string>
    <string name="chooseLocation_relocation">重新定位</string>
    <string name="chooseLocation_nearbyLocation">附近地址：</string>
    <string name="chooseLocation_moreLocation">更多地址</string>
    <string name="title_activity_searchaddress">地址查询</string>
    <string name="title_activity_test">测试</string>
    <string name="chooseLocation_chooseLocation">选择地址</string>
    <string name="chooseLocation_pleaseInput">请输入地址</string>
    <string name="searchLocation_hint">请输入地址</string>
    <string name="cancel">取消</string>
    <string name="searchDishes_hint">请输入食材或菜品</string>
    <string name="noNet">网络连接失败 点击重新加载</string>
    <string name="tab_home">首页</string>
    <string name="tab_cart">购物车</string>
    <string name="tab_custom_service">客服</string>
    <string name="tab_mine">我的</string>
</resources>
