<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choose_location"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.ins.feast.ui.activity.ChooseLocationActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageButton
                android:id="@+id/back"
                android:paddingRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="onClick_back"
                android:src="@mipmap/ic_leftarrow_white" />

            <TextView
                android:id="@+id/text_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/chooseLocation_chooseLocation"
                android:textColor="@color/white"
                android:textSize="@dimen/text_big" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/searchLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appBarLayout"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_search_gray"
            android:gravity="center"
            android:text="@string/chooseLocation_pleaseInput"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/searchLocation"
        android:layout_marginLeft="15dp"
        android:text="@string/chooseLocation_nowLocation"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/relocationRoot"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/textView"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nowLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:ellipsize="end"
            android:textSize="16sp"
            tools:text="武侯区桂溪街道天府二街蜀都中心2期" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/relocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick_relocation"
            android:text="@string/chooseLocation_relocation"
            android:textColor="#2B9EEA"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relocationRoot"
        android:layout_marginLeft="15dp"
        android:text="@string/chooseLocation_nearbyLocation"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:orientation="vertical"
        android:paddingLeft="15dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/nearbyLocationList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/moreLocationRoot"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chooseLocation_moreLocation"
                android:textColor="#D31D02"
                android:textSize="16sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@mipmap/ic_rightarrow_gray" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
